# homeassistant

./: .gitignore  README.md  automations.yaml  configuration.yaml  main.py  pyproject.toml  secrets.yaml  sensors.yaml
pyscript/scripts/: bambulab_manager.py
pyscript/scripts/awtrix/: awtrix_manager.py  crypto_ticker.py  intermarket_ticker.py  sonos_music.py  weather_sensors.py
pyscript_modules/: custom_requests.py  model.py
