[project]
name = "homeassistant"
version = "0.1.0"
description = "Used to develop with pyscript homeassistant plugin"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bambulabs-api>=2.6.3",
    "dotenv>=0.9.9",
    "paho-mqtt>=2.1.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "ruff-lsp>=0.0.62",
]

[tool.ruff]
line-length = 200

